--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,26 @@
     <groupId>moe.yo3explorer</groupId>
     <artifactId>skyscraper</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                    <mainClass>moe.yo3explorer.skyscraper.presentation.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
@@ -28,7 +40,7 @@
         <dependency>
             <groupId>moe.yo3explorer</groupId>
             <artifactId>dvb4j</artifactId>
-            <version>1.44-SNAPSHOT</version>
+            <version>1.45-SNAPSHOT</version>
         </dependency>
 
         <dependency>
